@Carousel @Fixing overflow on Y showing

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -39,13 +39,14 @@
 .carousel__sliders {
     display: flex;
     width: 100%;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     position: absolute;
     padding-top: 2rem;
 }
 
 /* Floaty text */
-.carousel__information {
+.carousel__information-group {
     width: 40%;
     height: 100%;
     position: absolute;
@@ -54,9 +55,8 @@
     font-size: 10px;
     z-index: 1;
     background-color: #DCC8B0;
+    margin-top: 1rem;
 }
-
-
 
 .carousel__sliders__slider {
     width: 250px;
